Grafo dificil pra burro
Ainda há coisas a se fazer nele, vou editando com o tempo

--- a/RelatorioFinalTotal.rmd
+++ b/RelatorioFinalTotal.rmd
@@ -718,32 +718,46 @@ df.240 <- df.240 %>% group_by(Idlattes) %>%
 V(g.240)$programa <- df.240$Programa
 V(g.240)$orient_dout <- perfil.240.df$ORIENTACAO_CONCLUIDA_DOUTORADO
 V(g.240)$orient_mest <- perfil.240.df$ORIENTACAO_CONCLUIDA_MESTRADO
-V(g.240)$publicacao <- perfil.240.df$PERIODICO
-V(g.240)$eventos <- perfil.240.df$EVENTO
+E(g.240)$publicacao <- perfil.240.df$PERIODICO
+E(g.240)$eventos <- perfil.240.df$EVENTO
+V(g.240)$color = 'blue'
+V(g.240)$name = df.240$Docente
+V(g.240)$name = str_extract(V(g.240)$name, '[^ ]+$')
 
 df.242 <- df.242 %>% group_by(Idlattes) %>% 
   slice(1L)
-V(g.242)$programa <- df$Programa
+V(g.242)$programa <- df.242$Programa
 V(g.242)$orient_dout <- perfil.242.df$ORIENTACAO_CONCLUIDA_DOUTORADO
 V(g.242)$orient_mest <- perfil.242.df$ORIENTACAO_CONCLUIDA_MESTRADO
-V(g.242)$publicacao <- perfil.242.df$PERIODICO
-V(g.242)$eventos <- perfil.242.df$EVENTO
+E(g.242)$publicacao <- perfil.242.df$PERIODICO
+E(g.242)$eventos <- perfil.242.df$EVENTO
+V(g.243)$color = 'yellow'
+V(g.242)$name = df.242$Docente
+V(g.242)$name = str_extract(V(g.242)$name, '[^ ]+$')
 
 df.243 <- df.243 %>% group_by(Idlattes) %>% 
   slice(1L)
 V(g.243)$programa <- df.243$Programa
 V(g.243)$orient_dout <- perfil.243.df$ORIENTACAO_CONCLUIDA_DOUTORADO
 V(g.243)$orient_mest <- perfil.243.df$ORIENTACAO_CONCLUIDA_MESTRADO
-V(g.243)$publicacao <- perfil.243.df$PERIODICO
-V(g.243)$eventos <- perfil.243.df$EVENTO
+E(g.243)$publicacao <- perfil.243.df$PERIODICO
+E(g.243)$eventos <- perfil.243.df$EVENTO
+V(g.243)$color = 'green'
+V(g.243)$name = df.243$Docente
+V(g.243)$name = str_extract(V(g.243)$name, '[^ ]+$')
 
 df.313 <- df.313 %>% group_by(Idlattes) %>% 
   slice(1L)
 V(g.313)$programa <- df.313$Programa
 V(g.313)$orient_dout <- perfil.313.df$ORIENTACAO_CONCLUIDA_DOUTORADO
 V(g.313)$orient_mest <- perfil.313.df$ORIENTACAO_CONCLUIDA_MESTRADO
-V(g.313)$publicacao <- perfil.313.df$PERIODICO
-V(g.313)$eventos <- perfil.313.df$EVENTO
+E(g.313)$publicacao <- perfil.313.df$PERIODICO
+V(g.313)$color = 'red'
+E(g.313)$eventos <- perfil.313.df$EVENTO
+V(g.313)$name = df.313$Docente
+V(g.313)$name = str_extract(V(g.313)$name, '[^ ]+$')
+
+grafo = graph.disjoint.union(g.240, g.242, g.243, g.313)
 ```
 
 ##CRISP-DM Fases 4 a 6 - Resultados e visualizações:
@@ -848,7 +862,16 @@ de bolsas, caracterizando um ano com elevado número de alunos não bolsistas.
 
 ###Grafo de proximidade entre pesquisadores do Programa de Pós-Graduação
 ```{r}
-plot(g.240, vertex.label = NA)
+plot(grafo, vertex.label=V(grafo)$name, layout = layout.auto,
+      edge.width = 1,
+      edge.arrow.width = 0.3,
+      edge.size = 3,
+      vertex.size = 3,
+      edge.arrow.size = 0.5,
+      vertex.size2 = 3,
+      vertex.label.cex = 1,
+      asp = 0.35,
+      margin = -0.1)
 ```
 
 O grafo acima representa os pesquisadores do Programa de Pós-Graduação em seus vértices e a existência de cooperação entre eles em suas arestas. É possível observar um grau profundo de cooperação entre a maioria dos pesquisadores, que, publicam trabalhos em  grande cooperatividade, gerando um complexo emaranhado de arestas para cada vértice. Existem excessões tais como os vértices mais afastados e o vértice único que não tem nenhuma aresta com adjacentes.
