--- a/RelatorioFinalTotal.rmd
+++ b/RelatorioFinalTotal.rmd
@@ -164,25 +164,25 @@ df.prog <- df.prog %>% separate(idLattes.Docente.Categoria.Grande.Area.Area.de.A
 print(length(perfil.240))
 ProfileList.240 <- list()
 for (i in 1:length(perfil.240)) {
-  ProfileList <- rbind(ProfileList, perfil.240[[i]]$nome)
+  ProfileList.240 <- rbind(ProfileList.240, perfil.240[[i]]$nome)
 }
 
 length(perfil.242)
-ProfileLists.242 <- list()
+ProfileList.242 <- list()
 for (i in 1:length(perfil.242)) {
-  ProfileList <- rbind(ProfileList, perfil.242[[i]]$nome)
+  ProfileList.242 <- rbind(ProfileList.242, perfil.242[[i]]$nome)
 }
 
 length(perfil.243)
-ProfileLists.243 <- list()
+ProfileList.243 <- list()
 for (i in 1:length(perfil.243)) {
-  ProfileList <- rbind(ProfileList, perfil.243[[i]]$nome)
+  ProfileList.243 <- rbind(ProfileList.243, perfil.243[[i]]$nome)
 }
 
 length(perfil.313)
-ProfileLists.313 <- list()
+ProfileList.313 <- list()
 for (i in 1:length(perfil.313)) {
-  ProfileList <- rbind(ProfileList, perfil.313[[i]]$nome)
+  ProfileList.313 <- rbind(ProfileList.313, perfil.313[[i]]$nome)
 }
 ```
 
@@ -398,6 +398,7 @@ perfil.313.df.professores <- extrai.perfis(perfil.313)
 ```{r}
 perfil.240.df.publicacoes <- extrai.producoes(perfil.240) %>%
   select(tipo_producao, everything()) %>% arrange(tipo_producao)
+perfil.240.df.publicacoes$tipo_producao[grepl("DEMAIS",perfil.240.df.publicacoes$tipo_producao)] <- "OUTRAS_PRODUCOES"
 
 perfil.242.df.publicacoes <- extrai.producoes(perfil.242) %>%
   select(tipo_producao, everything()) %>% arrange(tipo_producao)
@@ -411,7 +412,14 @@ perfil.313.df.publicacoes <- extrai.producoes(perfil.313) %>%
 *Extrai orientações*
 ```{r}
 perfil.240.df.orientacoes <- extrai.orientacoes(perfil.240) %>%
-  select(id_lattes_orientadores, natureza, ano, orientacao, everything())
+  select(id_lattes_orientadores, natureza, ano, orientacao, everything()) %>%
+  mutate(situacao = ifelse(grepl("CONCLUIDA", orientacao), "Concluída", "Em andamento")) %>%
+  mutate(Natureza = case_when(grepl("MESTRADO", str_to_upper(natureza)) ~ "Mestrado",
+                              grepl("PÓS-DOUTORADO", str_to_upper(natureza)) ~ "Pós-doutorado",
+                              grepl("DOUTORADO", str_to_upper(natureza)) ~ "Doutorado",
+                              grepl("INICIACAO", str_to_upper(natureza)) ~ "Iniciação Científica",
+                              grepl("INICIAÇÃO", str_to_upper(natureza)) ~ "Iniciação Científica",
+                              TRUE ~ "Outras naturezas"))
 
 perfil.242.df.orientacoes <- extrai.orientacoes(perfil.242) %>%
   select(id_lattes_orientadores, natureza, ano, orientacao, everything())
@@ -461,8 +469,22 @@ perfil.240.df <- perfil.240.df.professores %>%
     perfil.240.df.areas.de.atuacao %>% 
       select(area, idLattes) %>% 
       group_by(idLattes) %>% 
-      summarise(n_distinct(area)), 
-    by = "idLattes")
+      summarise(num_areas = n_distinct(area)), 
+    by = "idLattes") %>%
+  mutate(num_areas = factor(num_areas))
+
+perfil.240.df[is.na(perfil.240.df)] <- 0 #Remove NAs do dataframe
+
+perfil.240.df.areas.de.atuacao <- perfil.240.df.areas.de.atuacao %>%
+  left_join(perfil.240.df, by = "idLattes") %>%
+  rowwise() %>% #realizar sum() corretamente
+  mutate(orientacoes_concluidas = sum(ORIENTACAO_CONCLUIDA_DOUTORADO,
+                                      ORIENTACAO_CONCLUIDA_POS_DOUTORADO, ORIENTACAO_CONCLUIDA_MESTRADO,
+                                      OUTRAS_ORIENTACOES_CONCLUIDAS, na.rm = TRUE)) %>%
+  mutate(publicacoes = sum(CAPITULO_DE_LIVRO, EVENTO, PERIODICO,
+                           LIVRO, TEXTO_EM_JORNAIS, OUTRAS_PRODUCOES, na.rm = TRUE)) %>%
+  select(idLattes, grande_area, area, sub_area, especialidade, orientacoes_concluidas, publicacoes)
+class(perfil.240.df.areas.de.atuacao) <- c("tbl_df", "data.frame") #desfazer rowwise
 
 glimpse(perfil.240.df)
 
@@ -548,6 +570,21 @@ perfil.313.df <- perfil.313.df.professores %>%
     by = "idLattes")
 
 glimpse(perfil.313.df)
+
+especialidade.240.orient <- public.240.eventos.df %>%
+  filter (classificacao == "INTERNACIONAL") %>%
+  select (`autores-endogeno`) %>%
+  separate_rows(`autores-endogeno`, sep = ";") %>%
+  distinct() %>%
+  arrange(`autores-endogeno`) %>% mutate(internacional = "Sim") %>%
+  right_join(perfil.240.df, by = c("autores-endogeno" = "idLattes")) %>%
+  left_join(perfil.240.df.areas.de.atuacao, by = c("autores-endogeno" = "idLattes")) %>%
+  select(`autores-endogeno`, internacional, especialidade, orientacoes_concluidas) %>% distinct() %>%
+  rename(idLattes = `autores-endogeno`)
+
+especialidade.240.orient[is.na(especialidade.240.orient)] <- 0 #Remove NAs do dataframe
+especialidade.240.orient$especialidade <- sub("^$", "Não informada", especialidade.240.orient$especialidade)
+especialidade.240.orient$internacional <- sub(0, "Não", especialidade.240.orient$internacional)
 
 ```
 
@@ -675,6 +712,14 @@ orient.240.doutorado.df <- ori.ls2df(orient.240, 7) #Doutorado concluido
 orient.240.mestrado.df <- ori.ls2df(orient.240, 8) #Mestrado concluido
 orient.240.df <- rbind(rbind(orient.240.posdoutorado.df, orient.240.doutorado.df), orient.240.mestrado.df)
 
+bolsas.240.df <- orient.240.df %>% filter(bolsa == "SIM") %>%
+  group_by(natureza, ano) %>%
+  summarise(num_bolsas = n()) %>%
+  inner_join((orient.240.df %>%
+                group_by(natureza, ano) %>%
+                summarise(num_orients = n())), by = c("natureza", "ano")) %>%
+  mutate(ratio = num_bolsas/num_orients)
+
 orient.242.posdoutorado.df <- ori.ls2df(orient.242, 6) #pos-Doutorado concluido
 orient.242.doutorado.df <- ori.ls2df(orient.242, 7) #Doutorado concluido
 orient.242.mestrado.df <- ori.ls2df(orient.242, 8) #Mestrado concluido
@@ -694,7 +739,7 @@ orient.313.df <- rbind(rbind(orient.313.posdoutorado.df, orient.313.doutorado.df
 *Construção de Grafo de Colaborações*
 ```{r, warning=FALSE,message=FALSE}
 g.240 <- g.ls2ig(graphl.240)
-df.240 <- as.data.frame(V(g)$name); colnames(df) <- "Idlattes"
+df.240 <- as.data.frame(V(g.240)$name); colnames(df.240) <- "Idlattes"
 df.240 <- left_join(df.240, df.prog, by = c("Idlattes" = "idLattes"))
 
 g.242 <- g.ls2ig(graphl.242)
@@ -706,7 +751,7 @@ df.243 <- as.data.frame(V(g.243)$name); colnames(df.243) <- "Idlattes"
 df.243 <- left_join(df.243, df.prog, by = c("Idlattes" = "idLattes"))
 
 g.313 <- g.ls2ig(graphl.313)
-df.313 <- as.data.frame(V(g.313)$name); colnames(df.313f) <- "Idlattes"
+df.313 <- as.data.frame(V(g.313)$name); colnames(df.313) <- "Idlattes"
 df.313 <- left_join(df.313, df.prog, by = c("Idlattes" = "idLattes"))
 ```
 
@@ -723,7 +768,7 @@ V(g.240)$eventos <- perfil.240.df$EVENTO
 
 df.242 <- df.242 %>% group_by(Idlattes) %>% 
   slice(1L)
-V(g.242)$programa <- df$Programa
+V(g.242)$programa <- df.242$Programa
 V(g.242)$orient_dout <- perfil.242.df$ORIENTACAO_CONCLUIDA_DOUTORADO
 V(g.242)$orient_mest <- perfil.242.df$ORIENTACAO_CONCLUIDA_MESTRADO
 V(g.242)$publicacao <- perfil.242.df$PERIODICO
@@ -754,8 +799,8 @@ Foram escolhidos alguns resultados, em relação aos dados encontrados durante o
 public.240.periodico.df %>%
   group_by(ano) %>%
   summarise(Quantidade = n()) %>%
-  ggplot(aes(x = ano, y = Quantidade)) +
-  geom_bar(position = "stack",stat = "identity", fill = "darkcyan")+
+  ggplot(aes(ano, Quantidade, fill = ano)) +
+  geom_bar(position = "stack",stat = "identity") +
   ggtitle("Periodicos publicados por ano") +
   geom_text(aes(label=Quantidade), vjust=-0.3, size=2.5)+
   theme_minimal() + labs(x="Ano",y="Quantidade de Periodicos")
@@ -767,9 +812,9 @@ de Biologia Animal mantém se estável com flutuações normais, mas apresentou 
 ###Quantidade de periodicos publicados por professor(a) entre 2010 e 2017
 ```{r}
 perfil.240.df %>%
-  ggplot(aes(idLattes,PERIODICO)) +
-  geom_col(fill = "purple") +
-  ggtitle("Periodicos publicados por pesquisador") +
+  ggplot(aes(idLattes,PERIODICO, color = num_areas)) +
+  geom_point() +
+  ggtitle("Periodicos publicados por pesquisador (incluindo mediana)") +
   theme(legend.position="right",legend.text=element_text(size=7)) +
   guides(fill=guide_legend(nrow=5, byrow=TRUE, title.position = "top")) +
   labs(x="Pesquisador(a)",y="Numero de publicacoes") +
@@ -778,15 +823,42 @@ perfil.240.df %>%
 ```
 O gráfico acima demonstra o total de publicações para cada pesquisador, demonstrando relativa homogeneidade entre a quantidade de pesquisadores em média, porém há aqueles que deslocam a média para cima por estarem fora do desvio padrão acima ou abaixo, sendo que há destaque para dois pesquisadores que tem um número de publicação que corresponde cerca de quatro vezes o valor da média.
 
+###Número de areas de pesquisa e quantidade de eventos por pesquisador
+```{r}
+perfil.240.df %>%
+  ggplot(aes(idLattes,EVENTO, color = num_areas)) +
+  geom_point() +
+  ggtitle("Participação dos pesquisadores em eventos (incluindo mediana)") +
+  theme(legend.position="right",legend.text=element_text(size=7)) +
+  guides(fill=guide_legend(nrow=5, byrow=TRUE, title.position = "top")) +
+  labs(x="Pesquisador(a)",y="Quantidade de eventos") +
+  theme(axis.text.x=element_blank(), axis.ticks.x=element_blank()) +
+  geom_hline(yintercept = sum(perfil.240.df %>% summarize(x = median(EVENTO))), color = "red")
+```
+
+AAAAAAAA
+
 ###Publicação de livros por pais/ano
 ```{r}
 public.240.livros.df %>%
   group_by(ano,pais_de_publicacao) %>%
   ggplot(aes(x=ano,y=pais_de_publicacao, color= pais_de_publicacao)) +
   ggtitle("Livros publicados por ano") +
-  xlab("Ano") + ylab("Pais") + geom_point() + geom_jitter()
+  xlab("Ano") + ylab("Pais") + geom_jitter()
 ```
 Denota-se homogeneidade na distribuição de livros publicados para cada país de publicação, onde os estados unidos se equiparam ao Brasil quanto a número de lívros publicados para o PPG em Biologia Animal
+
+###Publicações de capítulos de livros por ano/país
+```{r}
+perfil.240.df.publicacoes %>%
+  filter((tipo_producao %in% c('LIVRO', 'CAPITULO_DE_LIVRO'))) %>%
+  group_by(tipo_producao,pais_de_publicacao) %>%
+  ggplot(aes(ano,tipo_producao,col=pais_de_publicacao)) +
+  geom_jitter() + ggtitle("Publicações de capítulos de livros por ano/país") +
+  labs(x='Tipo de produção',y='País')
+```
+
+AAAAAA
 
 ###Eventos nacionais e internacionais
 ```{r}
@@ -796,8 +868,8 @@ public.240.eventos.df %>%
                              , decreasing = TRUE), 10)))) %>%
   group_by(ano_do_trabalho,pais_do_evento) %>%
   ggplot(aes(x=ano_do_trabalho,y=pais_do_evento, color= pais_do_evento)) +
-  ggtitle("Participacoes em eventos") +
-  xlab("Ano") + ylab("Pais") + geom_point() + geom_jitter()
+  ggtitle("Participacão em eventos por localização") +
+  xlab("Ano") + ylab("Pais") + geom_jitter()
 ```
 Considerando eventos, o Programa de Biologia Animal teve comparecimento maior
 em eventos no Brasil que em países estrangeiros. Ainda assim, o gráfico mostra
@@ -806,12 +878,14 @@ todos os anos registrados na base de dados, principalmente nos Estados Unidos.
 
 ###Orientacoes completas por ano e natureza
 ```{r}
-ggplot(orient.240.df,aes(ano,fill=natureza)) +
-  geom_bar(stat = "count", position="dodge") +
-  ggtitle("Natureza das Orientacoes Completas Por Ano") +
+orient.240.df %>%
+  group_by(ano, natureza) %>% summarise(total = n()) %>%
+  ggplot(aes(x=ano,y=total,group=natureza,color=natureza)) +
+  geom_line() +
+  ggtitle("Número de orientações finalizadas por ano") +
   theme(legend.position="right",legend.text=element_text(size=7)) +
   guides(fill=guide_legend(nrow=5, byrow=TRUE, title.position = "top")) +
-  labs(x="Ano",y="Quantidade") + scale_y_continuous(limits = c(0, 32))
+  labs(x="Ano",y="Quantidade de Orientações")
 ```
 
 Observando a evolução do número de orientações completas ao longo dos anos,
@@ -824,15 +898,25 @@ de mestrado do Programa parecem bem estabelecidas, as supervisões de
 pós-doutorado ainda parecem incipientes, tendo em vista que não despontaram
 em nenhum dos anos pesquisados e chegaram a zero registros em 2017.
 
-###Bolsas distribuidas por ano
+###Evolução temporal de orientações em andamento e concluídas
 ```{r}
-orient.240.df %>% filter(bolsa == "SIM") %>%
-ggplot(aes(ano,fill=natureza)) +
-  geom_bar(stat = "count", position = "dodge") +
-  ggtitle("Bolsas disponibilizadas por ano") +
+perfil.240.df.orientacoes %>% group_by(ano, situacao) %>%
+  ggplot(aes(x=situacao,y=ano,color=ano)) +
+  geom_jitter(size = 0.8) + facet_wrap(. ~ Natureza) +
+  ggtitle("Disposição de orientações por ano")
+```
+
+AAAAAAAAA
+
+###Índice de bolsas entre naturezas e evolução temporal
+```{r}
+bolsas.240.df %>%
+  ggplot(aes(x=ano,y=ratio*100,color=natureza, group=natureza)) +
+  geom_line() +
+  ggtitle("Porcentagem de orientações contempladas por bolsas") +
   theme(legend.position="right",legend.text=element_text(size=7)) +
   guides(fill=guide_legend(nrow=5, byrow=TRUE, title.position = "top")) +
-  labs(x="Ano",y="Quantidade de bolsas") + scale_y_continuous(limits = c(0, 32))
+  labs(x="Ano",y="Índice de bolsas")
 ```
 
 Comparando os gráficos de orientações completas e de bolsas, é possível
@@ -853,61 +937,57 @@ plot(g.240, vertex.label = NA)
 
 O grafo acima representa os pesquisadores do Programa de Pós-Graduação em seus vértices e a existência de cooperação entre eles em suas arestas. É possível observar um grau profundo de cooperação entre a maioria dos pesquisadores, que, publicam trabalhos em  grande cooperatividade, gerando um complexo emaranhado de arestas para cada vértice. Existem excessões tais como os vértices mais afastados e o vértice único que não tem nenhuma aresta com adjacentes.
 
-###Natureza das orientações por tipo de orientação
+###Cursos de Mestrado e total de alunos no período (2011-2017)
 ```{r}
-ggplot(perfil.240.df.orientacoes, aes(natureza,fill=orientacao)) +
-  geom_bar(stat = 'count') +
-  theme(legend.position = 'right') +
-  ggtitle('Natureza das orientações por tipo de orientação') +
-  labs(x='Natureza',y='Quantidade de orientações') +
-  theme(axis.text.x=element_blank(),
-        axis.ticks.x=element_blank())
+orient.240.mestrado.df %>%
+  group_by(curso) %>%
+  summarise(Quantidade = n()) %>% mutate(Quantidade = factor(Quantidade)) %>%
+  ggplot(aes(x=Quantidade,y = curso, color = Quantidade)) +
+  geom_point() +
+  ggtitle('Total de orientações de mestrado (2011-2017)') +
+  labs(x='Quantidade de alunos',y='Curso do mestrando')
 ```
 
-### Orientações por ano:
+AAAAAAA
+
+###Relação de Orientações Concluídas x Publicações por área:
 ```{r}
-ggplot(perfil.240.df.orientacoes, aes(ano, fill=orientacao)) +
-  geom_bar(stat = 'count') +
-  ggtitle('Orientações por ano') +
-  theme(legend.position = 'right') +
-  labs(x='Ano',y='Quantidade de orientações')
+perfil.240.df.areas.de.atuacao %>%
+  select(-sub_area, -especialidade) %>%
+  distinct() %>%
+  ggplot(aes(publicacoes, orientacoes_concluidas, color = area)) +
+  geom_jitter(shape = 2, size = .8) +
+  ggtitle('Relação de Orientações Concluídas x Publicações') +
+  labs(x='Publicações',y='Orientações concluídas') + facet_wrap(grande_area ~ ., ncol = 2)
 ```
 
-A partir do número de orientações por ano e pela natureza destas,
-percebe-se que a quantidade de orientações de pós graduações no
-sentido restrito era pequena em proporção a outras orientações
-conduzidas por PPG por ano, até sua volta em 2015, onde o número
-de pós graduações no sentido restrito foram maiores que outras
-orientações.
+AAAAAAAA Lembrando que um pesquisador possui mais de uma grande area, o pesquisador se repete entre diferentes graficos
 
-### Mestrados e cursos que mais ocorrem por ano
-```{r}
-ggplot(orient.240.mestrado.df, aes(ano, fill=curso)) +
-  geom_bar(stat = 'count') +
-  ggtitle('Orientações por ano') +
-  theme(legend.position = 'right') +
-  labs(x='Ano',y='Cursos')
+###Quantidade de Orientações e Publicações pelo Número de Áreas
+```{r warning = FALSE}
+perfil.240.df.areas.de.atuacao %>% 
+  select(-sub_area, -especialidade) %>%
+  distinct() %>%
+  group_by(idLattes, orientacoes_concluidas, publicacoes) %>%
+  summarise(num_areas = n()) %>% mutate(num_areas = factor(num_areas)) %>%
+  ggplot(aes(publicacoes, orientacoes_concluidas, color = num_areas)) +
+  geom_point() +
+  ggtitle('Orientações e Publicações pelo Número de Áreas') +
+  labs(x='Publicações',y='Orientações concluídas') + facet_wrap(. ~ num_areas)
 ```
 
-Dentre os mestrados nos programas de pós graduação estudados, pode se perceber
-o grande domínio em volume da pós graduação em Biologia Animal, que na maioria
-dos anos corresponde a quase metade das orientações de pós graduação por ano
-dentre os PPG estudados.
+AAAAA Quem trabalha em mais áreas diferentes publica/orienta mais?
 
-### Publicações em países:
+###Presença em congressos internacionais por número de orientações:
 ```{r}
-perfil.240.df.publicacoes %>%
-  filter(!(tipo_producao %in% c('EVENTO','TEXTO_EM_JORNAIS','PERIODICO','ARTIGO_ACEITO'))) %>%
-  group_by(tipo_producao,pais_de_publicacao) %>%
-  ggplot(aes(ano,tipo_producao,col=pais_de_publicacao)) +
-  geom_point(alpha = 0.7) + geom_jitter() +
-  labs(x='Tipo de produção',y='País')
+especialidade.240.orient %>%
+  ggplot(aes(internacional, orientacoes_concluidas, color = especialidade)) +
+  geom_jitter(size = .8) +
+  ggtitle('Orientações concluidas x Participação em congressos internacionais') +
+  labs(x='Participacao internacional',y='Orientações concluídas')
 ```
 
-Observa-se deficiência de dados quanto ao país de publicação para periódicos,
-textos em jornais e artigos aceitos para os PPG analizados. Ainda assim, este
-gráfico demonstra bem a heterogeniedade das publicações de livros e/ou capítu-
-los no Brasil e demais países.
+AAAA
 
 ##Bibliografia
 
