--- a/RelatorioFinalTotal.rmd
+++ b/RelatorioFinalTotal.rmd
@@ -758,7 +758,11 @@ E(g.313)$eventos <- perfil.313.df$EVENTO
 V(g.313)$name = df.313$Docente
 V(g.313)$name = str_extract(V(g.313)$name, '[^ ]+$')
 
-grafo = graph.disjoint.union(g.240, g.242, g.243, g.313)
+grafo = graph.disjoint.union(g.240, g.242, g.243, g.313)%>%
+  set_edge_attr('weight', value = (1/1000)*perfil.total.df$PERIODICO) %>%
+  set_edge_attr('color', value = factor(perfil.total.df$senioridade)) %>%
+  set_edge_attr('width', value =  factor(perfil.total.df$`n_distinct(area)`)) %>%
+  set_vertex_attr('size', value = (1/10)*perfil.total.df$PERIODICO)
 ```
 
 ##CRISP-DM Fases 4 a 6 - Resultados e visualizações:
@@ -864,15 +868,15 @@ de bolsas, caracterizando um ano com elevado número de alunos não bolsistas.
 ###Grafo de proximidade entre pesquisadores do Programa de Pós-Graduação
 ```{r}
 plot(grafo, vertex.label=V(grafo)$name, layout = layout.auto,
-      edge.width = 1,
       edge.arrow.width = 0.3,
       edge.size = 3,
-      vertex.size = 3,
       edge.arrow.size = 0.5,
       vertex.size2 = 3,
-      vertex.label.cex = 1,
+      vertex.label.cex = 0.7,
+      vertex.label.color = 'black',
+      vertex.label.family = 'Arial',
       asp = 0.35,
-      margin = -0.1)
+      margin = 0.0)
 ```
 
 O grafo acima representa os pesquisadores do Programa de Pós-Graduação em seus vértices e a existência de cooperação entre eles em suas arestas. É possível observar um grau profundo de cooperação entre a maioria dos pesquisadores, que, publicam trabalhos em  grande cooperatividade, gerando um complexo emaranhado de arestas para cada vértice. Existem excessões tais como os vértices mais afastados e o vértice único que não tem nenhuma aresta com adjacentes.
